--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
 <body>
     <header>
         <h1>Zastav Travel Cards</h1>
+        <h2>Crowdsourced travel tips for intrepid explorers</h2>
         <nav>
             <div>
                 <a href="/">Home</a>
