--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -2,6 +2,7 @@
 {% block content %}
 
 <div className="signup-login">
+    <h1>Crowdsourced adventure travel tips for intrepid explorers</h1>
     <form action="/users" method="POST">
         <h2>Sign up</h2>
         <div>
