--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,11 +23,24 @@ button {
     display: block;
 }
 
-button {
+#welcome {
+    border: 0;
+        margin-block: 0.5em;
+        display: block;
+        padding-left: 0.5em;
+}
+
+.button {
     padding: 0.5em 1em;
     cursor: pointer;
-    background-color: rgb(186, 233, 158);
-    font-size: 1.4em;
+    background-color: grey;
+    font-size: 1em;
+}
+
+.welcomeforms {
+            border: 0;
+            margin-block: 0.5em;
+            display: block;
 }
 
 #add_quotes {
@@ -74,6 +87,7 @@ form .error {
 header nav {
     display: flex;
     gap: 20px;
+    background-color: rgba(128, 128, 128, 0.643);
 }
 
 footer {
@@ -87,23 +101,44 @@ footer {
     margin-bottom: 5px;
 }
 
-.Kyrgyzstan {
+.Food {
     background-image: url("../images/kyrgystan.png");
     padding: 20px;
     margin-bottom: 5px;
     background-color: red;
+    border: 5px solid black;
+    border-radius: 25px;
 }
 
-.Kazakhstan {
+.Lodgings {
     background-image: url("../images/astana.jpeg");
     padding: 20px;
     margin-bottom: 5px;
+    border: 5px solid black;
+    border-radius: 25px;
 }
 
-.Tajikistan {
+.Safety {
     background-image: url("../images/tajikistan.jpeg");
     padding: 20px;
     margin-bottom: 5px;
+    border: 5px solid black;
+    border-radius: 25px;
 }
 
+.Outdoors {
+    background-image: url("../images/tajikistan.jpeg");
+    padding: 20px;
+    margin-bottom: 5px;
+    border: 5px solid black;
+    border-radius: 25px;
+}
+
+.Culture {
+    background-image: url("../images/tajikistan.jpeg");
+    padding: 20px;
+    margin-bottom: 5px;
+    border: 5px solid black;
+    border-radius: 25px;
+}
 
