--- a/templates/blog/edit.html
+++ b/templates/blog/edit.html
@@ -26,7 +26,7 @@
         <input id="tags" name="tags" type="text" />
     </div>
     <div>
-        <button type="submit">Save</button>
+        <button type="submit" class="button">Save</button>
     </div>
 </form>
 
