--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -2,7 +2,6 @@
 {% block content %}
 
 <div className="signup-login">
-    <h1>Crowdsourced adventure travel tips for intrepid explorers</h1>
     <form action="/users" method="POST">
         <h2>Sign up</h2>
         <div>
@@ -15,12 +14,12 @@
         </div>
         <div>
             <label for="password">Password</label>
-            <input id="password" name="password" type="text" />
+            <input id="password" name="password" type="password" />
         </div>
         <div>
-            <button type="submit">Sign up</button>
+            <button type="submit" class="button">Sign up</button>
         </div>
     </form>
-</div>
+</div> 
 
 {% endblock content %}
