--- a/templates/blog/create.html
+++ b/templates/blog/create.html
@@ -3,17 +3,17 @@
 <form method="post" action="/blog">
     <h2>Add your post</h2>
     <div>
-        <label for="blog_post">Blog Post</label>
+        <label for="blog_post">Share your tip</label>
         <textarea id="blog_post" name="blog_post"></textarea> 
     </div>
     
     <div>
-        <label for="blog_title">Title</label>
+        <label for="blog_title">Destination</label>
         <input id="blog_title" name="blog_title" type="text" />
     </div>
 
     <div>
-        <label for="destination">Destination</label>
+        <label for="Topic">Topic</label>
         <select id="destination" name="destination">
             <option value="Kyrgyzstan">Kyrgyzstan</option>
             <option value="Kazakhstan">Kazakhstan</option>
@@ -22,12 +22,7 @@
     </div>
 
     <div>
-        <label for="tags">Tags</label>
-        <input id="tags" name="tags" type="text" />
-    </div>
-
-    <div>
-        <button type="submit">Save</button>
+        <button type="submit" class="button">Save</button>
     </div>
 </form>
 {% endblock content %}
