--- a/templates/base.html
+++ b/templates/base.html
@@ -26,11 +26,8 @@
                     </div>
                     </nav>
             {% else %}
-                <div>
-                    <a href="/login">Login</a>
-                </div>
-                <div>
-                    <a href="/signup">Sign up</a>
+                <div class="spacer">
+                    🏂 ⛰️ 🚵 🏔️ ⛷️
                 </div>
             {% endif %}       
         </nav>
