--- a/templates/blog/create.html
+++ b/templates/blog/create.html
@@ -13,11 +13,12 @@
     </div>
 
     <div>
-        <label for="Topic">Topic</label>
-        <select id="destination" name="destination">
-            <option value="Kyrgyzstan">Kyrgyzstan</option>
-            <option value="Kazakhstan">Kazakhstan</option>
-            <option value="Tajikistan">Tajikistan</option>
+        <label for="topics">Topic</label>
+        <select id="topics" name="topics">
+            <option value="Sights">Sights</option>
+            <option value="Food">Food</option>
+            <option value="Safety">Safety</option>
+            <option value="Lodgings">Lodgings</option>
         </select>
     </div>
 
