--- a/templates/blog/edit.html
+++ b/templates/blog/edit.html
@@ -9,22 +9,19 @@
     </div>
     
     <div>
-        <label for="blog_title">Post Title</label>
+        <label for="blog_title">Destination</label>
         <input id="blog_title" name="blog_title" type="text" value= "{{blog_post['blog_title']}}" />
     </div>
     <div>
-    <label for="destination">Destination</label>
-    <select id="destination" name="destination">
-        <option value="Kyrgyzstan">Kyrgyzstan</option>
-        <option value="Kazakhstan">Kazakhstan</option>
-        <option value="Tajikistan">Tajikistan</option>
+    <label for="topics">Topic</label>
+    <select id="topics" name="topics">
+        <option value="Sights">Sights</option>
+        <option value="Food">Food</option>
+        <option value="Safety">Safety</option>
+        <option value="Lodgings">Lodgings</option>
     </select>
     </div>
     
-    <div>
-        <label for="tags">Tags</label>
-        <input id="tags" name="tags" type="text" />
-    </div>
     <div>
         <button type="submit" class="button">Save</button>
     </div>
