--- a/templates/blog/main.html
+++ b/templates/blog/main.html
@@ -6,7 +6,7 @@
 <h2>My Stash</h2>
 
 {% for my_post in my_blogposts %}
-<div class = "{{my_post['destination']}}">
+<div class = "{{my_post['topics']}}">
     <h3>{{my_post['blog_title']}}</h3>
     <quote>"{{my_post['blog_post']}}"</quote>
     <div>
