--- a/templates/session/login.html
+++ b/templates/session/login.html
@@ -21,8 +21,8 @@
             <button type="submit" class="button">Login</button>
         </div>
     </form>
-    <form action="/signup">
-        <button type="submit" class="button">Sign up</button>
+    New to Zastav? <a href="/signup">Sign up here</a>
+        <!-- <button type="submit" class="button">Sign up</button> -->
     </form>
 </div>
 
