--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -20,6 +20,9 @@
             <button type="submit" class="button">Sign up</button>
         </div>
     </form>
+    <form action="/">
+        <button type="submit" class="button">Go back</button>
+    </form>
 </div> 
 
 {% endblock content %}
