--- a/static/css/style.css
+++ b/static/css/style.css
@@ -136,7 +136,7 @@ footer {
 }
 
 .Food {
-    background-image: url("../images/pakistan.jpeg");
+    background-image: url("../images/pakistan.jpg");
     padding: 20px;
     margin-bottom: 5px;
     border: 5px solid black;
