--- a/templates/blog/edit.html
+++ b/templates/blog/edit.html
@@ -4,7 +4,7 @@
     <h2>Edit Post</h2>
 
     <div>
-        <label for="blog_post">Blog Post</label>
+        <label for="blog_post">Edit your tip</label>
         <input id="blog_post" name="blog_post" type="text" value= "{{blog_post['blog_post']}}" />
     </div>
     
