--- a/templates/session/login.html
+++ b/templates/session/login.html
@@ -21,7 +21,7 @@
             <button type="submit" class="button">Login</button>
         </div>
     </form>
-    New to Zastav? <a href="/signup">Sign up here</a>
+    New to Zastav? <a href="/signup" id="sign-up-here">Sign up here</a>
         <!-- <button type="submit" class="button">Sign up</button> -->
     </form>
 </div>
